feat: add comments by event